# learning_poetry

./: .gitignore  README.md
poetry_test_pack/: pyproject.toml
poetry_test_pack/poetry_test_pack/: cli.py
