[tool.poetry]
name = "poetry-test-pack"
version = "0.1.0"
description = ""
authors = ["victorbertoldo <eu_viktor@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
httpx = "^0.26.0"

[tool.poetry.scripts]
testpack-cli = 'poetry_test_pack.cli:cli'


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
